--- a/Design Responsivo/inicio.html
+++ b/Design Responsivo/inicio.html
@@ -5,13 +5,12 @@
 	<meta type="viewport" content="width=device-width, initial-scale=1">
 	<title>Design Responsivo</title>
 	<link rel="stylesheet" type="text/css" href="css/fluido.css" media="screen">
+	<link rel="stylesheet" type="text/css" href="css/fonts.css">
 </head>
 <body>
 	<div id="corpo">
 		<div id="conteudo">
-			<div class="line">
 				<h2 class="titulo">Titulo</h2>
-			</div>
 			<div class="line">
 				<label for="inp-nome" class="grid col1">Nome:</label>
 				<input type="text" id="inp-nome" class="grid col5">
