--- a/Design Responsivo/inicio.html
+++ b/Design Responsivo/inicio.html
@@ -10,7 +10,7 @@
 <body>
 	<div id="corpo">
 		<div id="conteudo">
-				<h2 class="titulo">Titulo</h2>
+				<h2 class="titulo">Cadastro de Usuário</h2>
 			<div class="line">
 				<label for="inp-nome" class="grid col1">Nome:</label>
 				<input type="text" id="inp-nome" class="grid col5">
@@ -23,12 +23,12 @@
 				<label class="grid col1">Sexo:</label>
 				<div class="radio grid col4">
 					<div class="radio-option">
-						<input type="radio" name="sexo" id="masc">
-						<label for="masc">Masculino</label>
+						<input checked type="radio" name="sexo" id="masc" class="css-checkbox">
+						<label for="masc" class="css-label">Masculino</label>
 					</div>
 					<div class="radio-option">
-						<input type="radio" name="sexo" id="femi">
-						<label for="femi">Feminino</label>
+						<input type="radio" name="sexo" id="femi" class="css-checkbox">
+						<label for="femi" class="css-label">Feminino</label>
 					</div>
 				</div>
 			</div>
