--- a/Design Responsivo/inicio.html
+++ b/Design Responsivo/inicio.html
@@ -2,10 +2,11 @@
 <html lang="pt-br">
 <head>
 	<meta charset="UTF-8">
-	<meta type="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Design Responsivo</title>
-	<link rel="stylesheet" type="text/css" href="css/fluido.css" media="screen">
-	<link rel="stylesheet" type="text/css" href="css/fonts.css">
+	<link rel="shortcut icon" href="images/favicon1.png">
+	<link rel="stylesheet" href="css/fluido.css" media="screen">
+	<link rel="stylesheet" href="css/fonts.css">
 </head>
 <body>
 	<div id="corpo">
