--- a/Design Responsivo/menu.html
+++ b/Design Responsivo/menu.html
@@ -14,25 +14,26 @@
 	<style type="text/css">
 		html,body{
 			height: 100%;
-			transform: rotate(180deg);
 		}
-		body{
+/*		body{
 			background: url(images/bg-azul.jpg) 50% 50% no-repeat;
 			background-origin: all;
-		}
+		}*/
 		header{
 			position: relative;
-			background-color: transparent;
-			width: 100%;
-			height: 100px;
-			border-bottom: 1px solid #fff;
+			/*background: url(images/logo-eng-menu.svg) no-repeat 100% 100%;
+		    background-position: center;*/
+		    /*background-size: 70%;*/
+		    width: 100%;
+		    height: 100px;
 		}
 		#menu ul{
 			padding: 0;
+			text-align: center;
 		}
-		#menu ul li a{
+		#menu ul li a.link{
 			text-decoration: none;
-			color: #fff;
+			color: #000;
 			font-family: "Roboto";
 			text-transform: uppercase;
 			display: block;
@@ -47,57 +48,59 @@
 			min-height: 100px;
 			position: relative;
 		}
+		.menu-right{
+			float: right;
+		}
+		.menu-left{
+			float: left;
+		}
 		ul > li{
 			display: inline-block;
 			position: relative;
 			margin-right: 40px;
 			margin-top: 40px;
-			float: left;
 		}
-		#menu ul li a::before{
+		#menu ul li a.link::before{
 			top: -2px;
 			-webkit-transform: translateY(-10px);
 			-moz-transform: translateY(-10px);
 			transform: translateY(-10px);
 		}
-		#menu ul li a::after{
+		#menu ul li a.link::after{
 			bottom: 0;
 			-webkit-transform: translateY(10px);
 			-moz-transform: translateY(10px);
 			transform: translateY(10px);
 		}
-		#menu ul li a::before,#menu ul li a::after{
+		#menu ul li a.link::before,#menu ul li a.link::after{
 			position: absolute;
 			left: 0;
 			width: 100%;
 			height: 1px;
-			background: #fff;
+			background: #000;
 			content: '';
 			opacity: 0;
-			-webkit-transition: opacity 0.3s, -webkit-transform 0.3s;
-			-moz-transition: opacity 0.3s, -moz-transform 0.3s;
-			transition: opacity 0.3s, transform 0.3s;
+			visibility: hidden;
+			-webkit-transition: visibility 0.3s, opacity 0.3s, -webkit-transform 0.3s;
+			-moz-transition: visibility 0.3s, opacity 0.3s, -moz-transform 0.3s;
+			transition: visibility 0.3s, opacity 0.3s, transform 0.3s;
 		}
-		#menu ul li a:hover::before, #menu ul li a:hover::after{
+		#menu ul li a.link:hover::before, #menu ul li a.link:hover::after,#menu ul li a.link:focus::before, #menu ul li a.link:focus::after{
+			visibility: visible;
 			opacity: 1;
-			-webkit-transition: opacity 0.3s, -webkit-transform 0.3s;
-			-moz-transition: opacity 0.3s, -moz-transform 0.3s;
-			transition: opacity 0.3s, transform 0.3s;
-			-webkit-transform: translateY(0);
-			-moz-transform: translateY(0);
-			transform: translateY(0);
-		}
-		#menu ul li a:focus::before, #menu ul li a:focus::after{
-			opacity: 1;
-			-webkit-transition: opacity 0.3s, -webkit-transform 0.3s;
-			-moz-transition: opacity 0.3s, -moz-transform 0.3s;
-			transition: opacity 0.3s, transform 0.3s;
+			-webkit-transition: visibility 0.3s, opacity 0.3s, -webkit-transform 0.3s;
+			-moz-transition: visibility 0.3s, opacity 0.3s, -moz-transform 0.3s;
+			transition: visibility 0.3s, opacity 0.3s, transform 0.3s;
 			-webkit-transform: translateY(0);
 			-moz-transform: translateY(0);
 			transform: translateY(0);
 		}
 		#logo{
-			margin-top: 20px;
+			position: absolute;
+			display: block;
+			top: 0;
+			left: 0;
+			/*background: url(images/logo-eng-menu.svg) 100% 100%;*/
 		}
 	</style>
 	<script type="text/javascript">
@@ -126,7 +129,7 @@
 					</li>
 					<li><a href="#" class="link">Produtos e Serviços</a>
 					</li>
-					<li id="logo"><img src="images/gear-icon.svg"></li>
+					<!-- <li><img id="logo" src="images/logo-eng-menu.svg"></li> -->
 					<li><a href="#" class="link">Coworking</a>
 					</li>
 					<li><a href="#" class="link">Expertises</a>
@@ -138,6 +141,8 @@
 				</ul>	
 			</nav>
 		</section>
-	</header><!-- /header -->
+	</header>
+	<!-- /header -->
+	<div id="logo"><img src="images/logo-eng-menu.svg"></div>
 </body>
 </html>
